# DreamRender

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  xmake.lua
.github/workflows/: cmake-single-platform.yml  cppBuilds.yml
common/: CMakeLists.txt  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  xmake.lua
core/: CMakeLists.txt  Camera.cpp  Camera.h  DensityGrid.cpp  DensityGrid.h  Filter.cpp  Filter.h  Fresnel.cpp  Fresnel.h  Integrator.cpp  Integrator.h  Light.cpp  Light.h  Material.cpp  Material.h  Medium.cpp  Medium.h  Microfacet.cpp  Microfacet.h  PhaseFunction.cpp  PhaseFunction.h  PostProcessing.cpp  PostProcessing.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Sampling.cpp  Sampling.h  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h  Shape.cpp  Shape.h  SobolMatrices1024x52.h  Spectrum.cpp  Spectrum.h  (+10 more)
core/include/: Camera.h  Filter.h  Integrator.h  Intersection.h  Light.h  Material.h  Medium.h  Random.h  Render.h  Sampler.h  Scene.h  SceneParser.h  Shape.h  Sobol.h  SobolMatrices1024x52.h  Texture.h  Utils.h
core/src/: Camera.cpp  Integrator.cpp  Intersection.cpp  Light.cpp  Material.cpp  Medium.cpp  Render.cpp  Sampler.cpp  Scene.cpp  SceneParser.cpp  Shape.cpp  Texture.cpp
dep/embree/doc/: README.md
dep/embree/include/embree3/: rtcore_builder.h  rtcore_common.isph  rtcore_scene.h
dep/glad/: CONTROL
dep/glad/debug/lib/: glad.lib
dep/glad/share/glad/: gladTargets-debug.cmake  gladTargets-release.cmake  gladTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
dep/glfw3/debug/lib/pkgconfig/: glfw3.pc
dep/glfw3/share/glfw3/: glfw3ConfigVersion.cmake  glfw3Targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
dep/glm/: CONTROL
dep/glm/share/glm/: glm-config.cmake  vcpkg.spdx.json
dep/nlohmann-json/debug/lib/pkgconfig/: nlohmann_json.pc
dep/nlohmann-json/lib/pkgconfig/: nlohmann_json.pc
dep/nlohmann-json/share/nlohmann-json/: vcpkg.spdx.json  vcpkg_abi_info.txt
dep/nlohmann-json/share/nlohmann_json/: nlohmann_jsonConfigVersion.cmake  nlohmann_jsonTargets.cmake
dep/oidn/doc/: README.md  third-party-programs-oneTBB.txt
dep/oidn/include/OpenImageDenoise/: oidn.h
embree/: CMakeLists.txt
embree/doc/: CHANGELOG.md  third-party-programs.txt
embree/include/embree3/: rtcore_device.isph  rtcore_quaternion.h  rtcore_quaternion.isph  rtcore_ray.h  rtcore_ray.isph
embree/lib/: embree3.lib
embree/lib/cmake/embree-3.13.5/: embree-config-version.cmake  embree-config.cmake
oidn/: CMakeLists.txt
oidn/doc/: CHANGELOG.md  third-party-programs-oneDNN.txt
oidn/include/OpenImageDenoise/: config.h  oidn.hpp
oidn/lib/cmake/OpenImageDenoise-1.4.3/: OpenImageDenoiseConfig-release.cmake  OpenImageDenoiseConfig.cmake  OpenImageDenoiseConfigVersion.cmake
opengl_utils/: CMakeLists.txt
opengl_utils/include/: RenderPass.h  Shader.h
opengl_utils/src/: RenderPass.cpp  Shader.cpp
scene/: boy.json  boy2.json  cornellbox2.json  mis.json  staircase.json  teapot.json
shader/: LastFrameShader.frag  MixFrameShader.frag  OutputShader.frag  VertexShader.vert  mixframe.frag  output.frag  post.frag
tbb/: CMakeLists.txt
